[Java] Add JVM opts to generator tasks.